--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.9.0",
+    "graphql-request": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "redis": "^4.6.15"
   }
 }
