--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
+    "cookie-parser": "^1.4.6",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
